--- a/conf/crontab-slave.in
+++ b/conf/crontab-slave.in
@@ -3,19 +3,19 @@
 #
 # start slave_run automatically after reboots
 #
-@reboot @sharedir@/piuparts/slave/slave_cleanup ; @sharedir@/piuparts/slave/slave_run
+@reboot piupartss @sharedir@/piuparts/slave/slave_cleanup ; @sharedir@/piuparts/slave/slave_run
 
 #
 # monitor slave session every hour
 #
-16 * * * * @sharedir@/piuparts/slave/detect_slave_problems
+16 * * * * piupartss @sharedir@/piuparts/slave/detect_slave_problems
 
 #
 # monitor for problems every six hours
 #
-23 */6 * * * @sharedir@/piuparts/slave/detect_leftover_processes
+23 */6 * * * piupartss @sharedir@/piuparts/slave/detect_leftover_processes
 
 #
 # monitor for cruft in the temporary directory once a day
 #
-00  0 * * * @sharedir@/piuparts/slave/detect_tmp_cruft
+00  0 * * * piupartss @sharedir@/piuparts/slave/detect_tmp_cruft
