distros.conf: rename buster-proposed to buster-next
Signed-off-by: Andreas Beckmann <anbe@debian.org>

--- a/conf/distros.conf
+++ b/conf/distros.conf
@@ -139,7 +139,8 @@ depends = buster
 uri = http://deb.debian.org/debian-debug
 depends = buster
 
-[buster-proposed]
+# this is a full distro representing an upcoming (old-)stable point release
+[buster-next]
 uri = None
 depends = buster buster/updates buster-updates buster-proposed-updates
 candidates = buster buster/updates buster-proposed-updates
