distros.conf: rename stretch-proposed to stretch-next
Signed-off-by: Andreas Beckmann <anbe@debian.org>

--- a/conf/distros.conf
+++ b/conf/distros.conf
@@ -111,7 +111,8 @@ depends = stretch
 uri = http://deb.debian.org/debian-debug
 depends = stretch
 
-[stretch-proposed]
+# this is a full distro representing an upcoming (old-)stable point release
+[stretch-next]
 uri = None
 depends = stretch stretch/updates stretch-updates stretch-proposed-updates
 candidates = stretch stretch/updates stretch-proposed-updates
