known-problems: add separate module_build_error_error.conf
Signed-off-by: Andreas Beckmann <anbe@debian.org>

--- a/known_problems/module_build_error_error.conf
+++ b/known_problems/module_build_error_error.conf
@@ -2,8 +2,8 @@
 # detect dkms module source packages that fail to build for a current kernel
 #
 PATTERN='Error! Bad return status for module build on kernel'
-WHERE='pass'
-ISSUE=1
+WHERE='fail bugged affected'
+ISSUE=0
 HEADER="DKMS-packages failing to build a module for a default kernel"
 HELPTEXT="
 <p>Kernel module source may not be compatible with the latest kernel.
