update configuration for stable=buster
Signed-off-by: Andreas Beckmann <anbe@debian.org>

--- a/conf/distros.conf
+++ b/conf/distros.conf
@@ -176,19 +176,19 @@ target-release = experimental
 
 # alias
 [oldoldstable]
-distribution = wheezy
-
-# alias
-[oldstable]
 distribution = jessie
 
 # alias
-[stable]
+[oldstable]
 distribution = stretch
 
 # alias
-[testing]
+[stable]
 distribution = buster
+
+# alias
+[testing]
+distribution = bullseye
 
 
 # It's also possible to have "virtual" entries by setting uri to
